massive commit :: replacement of old project